# player

./: README.md  REDME.md  index.html  package.json  pnpm-lock.yaml
src/: App.vue  main.ts
src-tauri/: .env  Cargo.toml  music.db  tauri.conf.json
src-tauri/capabilities/: default.json  fs-player.json
src-tauri/src/: command.rs  database.rs  get_idv3.rs  lib.rs  main.rs  music_info.rs  music_play.rs  setup.rs
src/components/: ContextMenu.vue  navPage.vue  navigate.vue  playerBar.vue  top.vue  topPage.vue
src/router/: index.ts
src/stores/: musicInfo.ts
src/views/: favPage.vue  favorite.vue  loadPage.vue  playback.vue  store.vue  storePage.vue
