[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"


[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }




[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["protocol-asset"] }
tauri-plugin-log = "2.7.0"
tauri-plugin-store = "2.4.0"
sqlx = {version="0.8.6",features= ["sqlite", "runtime-tokio", "macros"] }
tauri-plugin-dialog = "2.4.0"
lofty = {version = "0.22.4",features = ["default"] }
tokio = { version = "1.47.1", features = ["full"] }
tauri-plugin-fs = "2.4.2"
rayon = "1.10.0"
rodio = {version = "0.21.1",features = ["symphonia-all"] }
once_cell = "1.21.3"

